--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,11 @@ image: gitpod/workspace-full:latest
 tasks:
   - init: |
       sudo apt-get update
-      sudo apt-get install -y xvfb
+      sudo apt-get install -y xvfb libgtk2.0-0 libgtk-3-0 libnotify-dev \
+                             libgconf-2-4 libnss3 libxss1 libasound2 \
+                             libpangocairo-1.0-0 libatk1.0-0 libcups2 \
+                             libxcomposite1 libxrandr2 libxtst6 \
+                             libpango1.0-0 libatk-bridge2.0-0 \
+                             libgbm1 libxkbfile1
       npm install
     command: npm run cypress:open
