--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.13.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
